examples/misc/error/module_import-rec_2.bfr
open import
  "module_import-rec_1.bfr"

codegen []